Export boost and lcm dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,8 @@ install(DIRECTORY include/
   DESTINATION include/
 )
 
+ament_export_dependencies(Boost)
+ament_export_dependencies(lcm)
 ament_export_include_directories(include)
 ament_export_libraries(${PROJECT_NAME})
 ament_package()
